--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <header>
         <h1>
-            Моя страничка
+            Страничка обо мне
         </h1>
     </header>
 
@@ -19,21 +19,25 @@
 
         <section class="about">
             <div class="photo">
-                <img style = "height: 300px" src="https://sun9-29.userapi.com/impf/c850628/v850628229/da4a4/l3F_30rGICI.jpg?size=720x960&quality=96&sign=a4e1e07a36b57d517c132e974dc5a19f&type=album" alt="">
+                <figure>
+                    <img src="https://sun9-29.userapi.com/impf/c850628/v850628229/da4a4/l3F_30rGICI.jpg?size=720x960&quality=96&sign=a4e1e07a36b57d517c132e974dc5a19f&type=album"
+                    alt = "Подгружаем..." height="200">
+                    <figcaption>Это я)</figcaption>
+                </figure>
             </div>
 
             <div class="info">
                 <h2>Рома косенко</h2>
                 <p class="profession">
-                    <strong>HI</strong>
+                    <strong>Программист</strong>
                 </p>
-                <p class="hobbies_title">Мои хобби</p>
-                <ul class="hobbies">
-                    <li>Первое</li>
-                    <li>Второе</li>
-                    <li>Третье</li>
-                    <li>Четвертое</li>
-                </ul>
+                <p class="hobbies_title">Мои хобби&#58</p>
+                <ol class="hobbies">
+                    <li>Языки</li>
+                    <li>Музыка</li>
+                    <li>Спорт</li>
+                    <li>Проганье</li>
+                </ol>
             </div>
         </section>
 
@@ -41,8 +45,9 @@
 
         <section class="feedback">
             <button id = "like">
-                Поставь мне лайк
+                Поставь мне <b>лайк</b>
             </button>
+
             <div class="opinion">
                 <form action="">
                     <h2>Как тебе я?</h2>
@@ -51,11 +56,10 @@
                     <input type="radio" name="opinion"  id = "opinion_2">
                     <label for="opinion_2">Покатит</label>
                     <input type="radio" name="opinion"  id = "opinion_3">
-                    <label for="opinion_3">Такое</label> <br>
-                    <textarea name="Комментарий обо мне" id="" cols="30" rows="10"></textarea>
+                    <label for="opinion_3"><em>Такое</em></label> <br>
+                    <textarea name="Комментарий обо мне" cols="30" rows="10"></textarea>
                     <button id="send_form">Отправить</button>
                 </form>
-
             </div>
         </section>
 
