--- a/index.html
+++ b/index.html
@@ -3,27 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Сайт</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-
-    <header>
+    <header class = "header">
         <h1>
             Страничка обо мне
         </h1>
     </header>
 
-    <hr>
-
-    <main>
-
+    <main class="main">
         <section class="about">
             <div class="photo">
-                <figure>
-                    <img src="https://sun9-29.userapi.com/impf/c850628/v850628229/da4a4/l3F_30rGICI.jpg?size=720x960&quality=96&sign=a4e1e07a36b57d517c132e974dc5a19f&type=album"
-                    alt = "Подгружаем..." height="200">
-                    <figcaption>Это я)</figcaption>
-                </figure>
+                <img src="https://sun9-29.userapi.com/impf/c850628/v850628229/da4a4/l3F_30rGICI.jpg?size=720x960&quality=96&sign=a4e1e07a36b57d517c132e974dc5a19f&type=album"
+                alt = "Подгружаем...">
             </div>
 
             <div class="info">
@@ -41,24 +35,26 @@
             </div>
         </section>
 
-        <hr>
-
         <section class="feedback">
-            <button id = "like">
-                Поставь мне <b>лайк</b>
-            </button>
 
             <div class="opinion">
-                <form action="">
+                <form action="" class="form">
                     <h2>Как тебе я?</h2>
+                    <div class="input_wrapper">
                     <input type="radio" name="opinion" id = "opinion_1" >
                     <label for="opinion_1">Топ</label>
                     <input type="radio" name="opinion"  id = "opinion_2">
                     <label for="opinion_2">Покатит</label>
                     <input type="radio" name="opinion"  id = "opinion_3">
                     <label for="opinion_3"><em>Такое</em></label> <br>
-                    <textarea name="Комментарий обо мне" cols="30" rows="10"></textarea>
-                    <button id="send_form">Отправить</button>
+                    </div>
+
+                    <button id = "like" class = "like btn">
+                        Поставь мне <b>лайк</b>
+                    </button>
+
+                    <textarea class = "textarea" name="Комментарий обо мне" cols="30" rows="10"></textarea>
+                    <button id="send_form" class ="btn">Отправить</button>
                 </form>
             </div>
         </section>
