Using classes, not id

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                     <input type="radio" name="opinion"  id = "opinion_3">
                     <label for="opinion_3"><em>Такое</em></label> <br>
                     </div>
+                    <textarea class = "textarea" name="Комментарий обо мне" cols="30" rows="10"></textarea>
 
-                    <button id = "like" class = "like btn">
-                        Поставь мне <b>лайк</b>
+                    <button class = "btn btn-like">
+                        Поставь мне лайк
                     </button>
 
-                    <textarea class = "textarea" name="Комментарий обо мне" cols="30" rows="10"></textarea>
-                    <button id="send_form" class ="btn">Отправить</button>
+                    <button class ="btn btn-send">Отправить</button>
                 </form>
             </div>
         </section>
